# opiqo-linux

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README-gtk2.md  README-gtk3.md  README-gtk4.md  README-xlib.md  README.md  Readme.md  build_log.txt  build_output.txt  opiqo
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  opiqo  opiqo_resources.c
design/: gtk4.md
docs/: Features.md  Implementation-gtk2.md  Implementation-gtk3.md  Implementation-gtk4.md  Implementation-xlib.md  Plan-gtk2.md  Plan-gtk3.md  Plan-ncurses.md  Plan-xlib.md  Plan.md  tests.md
issues/: 3.md  8.md
packaging/rpm/: opiqo.spec
src/: LV2Plugin.hpp  LiveEffectEngine.cpp  LiveEffectEngine.h  main.cpp  main_linux.cpp
src/gtk2/: AppSettings.cpp  AppSettings.h  AudioEngine.cpp  AudioEngine.h  ControlBar.cpp  ControlBar.h  JackPortEnum.cpp  JackPortEnum.h  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  PluginDialog.cpp  PluginDialog.h  PluginSlot.cpp  PluginSlot.h  PresetBar.cpp  PresetBar.h  SettingsDialog.cpp  SettingsDialog.h  main_gtk2.cpp  version.h
src/gtk3/: AppSettings.h  AudioEngine.cpp  ControlBar.cpp  ControlBar.h  JackPortEnum.cpp  JackPortEnum.h  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  PluginDialog.cpp  PluginDialog.h  PluginSlot.cpp  PluginSlot.h  PresetBar.cpp  PresetBar.h  SettingsDialog.cpp  SettingsDialog.h  version.h
src/gtk4/: AppSettings.cpp  AppSettings.h  AudioEngine.cpp  AudioEngine.h  ControlBar.cpp  ControlBar.h  JackPortEnum.cpp  JackPortEnum.h  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  PluginDialog.cpp  PluginDialog.h  PluginSlot.cpp  PluginSlot.h  PresetBar.cpp  PresetBar.h  SettingsDialog.cpp  SettingsDialog.h  opiqo.gresource.xml  version.h
src/linux/: AppSettings.cpp  AppSettings.h  AudioEngine.cpp  AudioEngine.h  ControlBar.cpp  ControlBar.h  JackPortEnum.cpp  JackPortEnum.h  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  PluginDialog.cpp  PluginDialog.h  PluginSlot.cpp  PluginSlot.h  SettingsDialog.cpp  SettingsDialog.h  opiqo.css
src/xlib/: AppSettings.cpp  AudioEngine.cpp  AudioEngine.h  ControlBar.cpp  ControlBar.h  JackPortEnum.cpp  MainWindow.cpp  MainWindow.h  ParameterPanel.cpp  ParameterPanel.h  PluginDialog.cpp  PluginDialog.h  PluginSlot.cpp  PluginSlot.h  PresetBar.cpp  PresetBar.h  SettingsDialog.cpp  SettingsDialog.h  XlibApp.cpp  XlibApp.h  main_xlib.cpp
tests/: audio_engine_stub.cpp  test_live_effect_engine.cpp  test_lv2plugin.cpp
